# CVTree

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
cvtree/: CMakeLists.txt  cv2dm.cpp  cv2dm.h  cvdump.cpp  cvmeth.cpp  cvmeth.h  cvtree.cpp  cvtree.h  diffMatrix.cpp  distmatrix.cpp  distmatrix.h  distmeth.cpp  distmeth.h  dm2tree.cpp  dm2tree.h  g2cv.cpp  g2cv.h  genome.cpp  genome.h  getdist.cpp  kstring.cpp  kstring.h  marktree.cpp  marktree.h  mconv.cpp  readgenome.cpp  readgenome.h  sampleMeth.cpp  sampleMeth.h  sampling.cpp  sampling.h  tree.cpp  tree.h  treeboot.cpp  treedist.cpp  treemeth.cpp  treemeth.h
example/: list  runCVTree.sh
example/dm/: Hao.faa.cv3.nc  Hao.faa.cv4.nc  Hao.faa.cv5.nc  Hao.faa.cv6.nc  Hao.faa.cv7.nc
example/faa/: Aerococcus_urinae_ACS_120_V_Col10a_uid64757.faa  Alicyclobacillus_acidocaldarius_DSM_446_uid59199.faa  Anoxybacillus_flavithermus_WK1_uid59135.faa  Carnobacterium_17_4_uid65789.faa  Enterococcus_faecalis_V583_uid57669.faa  Escherichia_coli_K_12_substr__MG1655_uid57779.faa  Exiguobacterium_AT1b_uid59093.faa  Exiguobacterium_sibiricum_255_15_uid58053.faa
example/nwk/: K4.faa.nwk
example/result/: K3.faa.nwk
example/tree/: Hao.faa.cv3.nwk  Hao.faa.cv4.nwk  Hao.faa.cv5.nwk  Hao.faa.cv6.nwk  Hao.faa.cv7.nwk
kit/: CMakeLists.txt  fileOpt.cpp  fileOpt.h  info.cpp  info.h  kit.h  stringOpt.cpp  stringOpt.h
manual/: CMakeLists.txt  cvtreeManual.tex
scripts/: runCVTree.pl
src/: CMakeLists.txt  buildTree.cpp  buildTree.h  cv.cpp  cv.h  cv2dm.cpp  cv2dm.h  cvdump.cpp  cvmeth.cpp  cvmeth.h  cvtree.cpp  cvtree.h  diffMatrix.cpp  dist.cpp  dist.h  distance.cpp  distance.h  distmatrix.cpp  distmatrix.h  distmeth.cpp  distmeth.h  dm2tree.cpp  dm2tree.h  g2cv.cpp  g2cv.h  getdist.cpp  global.h  info.cpp  info.h  kstring.cpp  kstring.h  mconv.cpp  memory.cpp  memory.h  method.cpp  method.h  mkdb.cpp  mkdb.h  neighbor.cpp  neighbor.h  (+10 more)
